--- a/News&Blog.html
+++ b/News&Blog.html
@@ -16,7 +16,7 @@
   />
 
   <!-- Your main stylesheet -->
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="style.css"/>
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -32,12 +32,12 @@
              alt="EULSS Logo" />
       </div>
       <ul class="nav-links">
-        <li><a href="../docs/index.html">Home</a></li>
-        <li><a href="../docs/Employabilityhub.html">Employability Hub</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/Employabilityhub.html">Employability Hub</a></li>
         <li><a href="#">Resources</a></li>
-        <li><a href="../docs/comimittees.html">Committees</a></li>
+        <li><a href="/comimittees.html">Committees</a></li>
         <li><a href="News&Blog.html" class="active">News &amp; Blog</a></li>
-        <li><a href="../docs/Alumni.html">Alumni</a></li>
+        <li><a href="/Alumni.html">Alumni</a></li>
       </ul>
       <div class="burger">
         <div></div><div></div><div></div>
