--- a/comimittees.html
+++ b/comimittees.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <header class="header">
-  <nav class="navbar">
-    <!-- Logo -->
-    <div class="logo">
-      <a href="index.html">
-        <img src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg" alt="EULSS Logo" />
-      </a>
-    </div>
-
-    
   <meta charset="UTF-8" />
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
+
+
+    <!-- Mobile burger -->
+    <div class="burger">
+      <div></div><div></div><div></div>
+    </div>
+  </nav>
+</header>
+
+
   <title>Alumni Network – EULSS</title>
 
   <!-- Google Fonts already in your project -->
@@ -25,7 +25,7 @@
   />
 
   <!-- Main stylesheet -->
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -39,12 +39,12 @@
         />
       </div>
       <ul class="nav-links">
-        <li><a href="../docs/index.html">Home</a></li>
-        <li><a href="../docs/Employabilityhub.html">Employability Hub</a></li>
-        <li><a href="#">Resources</a></li>
-         <li><a href="../docs/News&Blog.html">News &amp; Blog</a></li>
-        <li><a href="../docs/comimittees.html">Committees</a></li>
-        <li><a href="../docs/Alumni.html">Alumni</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/Employabilityhub.html">Employability Hub</a></li>
+        <li><a href=".#">Resources</a></li>
+        <li><a href="/News&Blog.html">News &amp; Blog</a></li>
+        <li><a href="/comimittees.html">Committees</a></li>
+        <li><a href="/Alumni.html">Alumni</a></li>
       </ul>
       <div class="burger">
         <div></div><div></div><div></div>
