--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EULSS</title>
-  <link rel="stylesheet" href="../docs/styles.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -18,12 +18,12 @@
 
       <!-- Nav links -->
       <ul class="nav-links">
-        <li><a href="../docs/index.html">Home</a></li>
-        <li><a href="../docs/Employabilityhub.html">Employability Hub</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/Employabilityhub.html">Employability Hub</a></li>
         <li><a href="#">Resources</a></li>
-        <li><a href="../docs/comimittees.html">Committees</a></li>
-       <li><a href="../docs/News&Blog.html">News &amp; Blog</a></li>
-        <li><a href="../docs/Alumni.html">Alumni</a></li>
+        <li><a href="/comimittees.html">Committees</a></li>
+       <li><a href="/News&Blog.html">News &amp; Blog</a></li>
+        <li><a href="/Alumni.html">Alumni</a></li>
       </ul>
 
       <!-- Burger icon -->
