--- a/Employabilityhub.html
+++ b/Employabilityhub.html
@@ -14,7 +14,7 @@
   <title>Employability Hub – EULSS</title>
 
   <!-- Correct path up one level into css/ -->
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -31,12 +31,12 @@
 
       <!-- Nav links -->
       <ul class="nav-links">
-        <li><a href="../docs/index.html">Home</a></li>
-        <li><a href="../docs/Employabilityhub.html">Employability Hub</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/Employabilityhub.html">Employability Hub</a></li>
         <li><a href="#">Resources</a></li>
-        <li><a href="../docs/comimittees.html">Committees</a></li>
-        <li><a href="../docs/News&Blog.html">News &amp; Blog</a></li>
-        <li><a href="../docs/Alumni.html">Alumni</a></li>
+        <li><a href="/comimittees.html">Committees</a></li>
+        <li><a href="/News&Blog.html">News &amp; Blog</a></li>
+        <li><a href="/Alumni.html">Alumni</a></li>
       </ul>
 
       <!-- Burger icon for mobile -->
