--- a/Gallery.html
+++ b/Gallery.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gallery – EULSS</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -16,13 +16,13 @@
              alt="EULSS Logo" />
       </div>
       <ul class="nav-links">
-        <li><a href="../docs/index.html">Home</a></li>
-        <li><a href="../docs/Employabilityhub.html">Employability Hub</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/Employabilityhub.html">Employability Hub</a></li>
         <li><a href="#">Resources</a></li>
-        <li><a href="../docs/comimittees.html">Committees</a></li>
-         <li><a href="../docs/News&Blog.html">News &amp; Blog</a></li>
+        <li><a href="/comimittees.html">Committees</a></li>
+         <li><a href="/News&Blog.html">News &amp; Blog</a></li>
         <li><a class="active" href="gallery.html">Gallery</a></li>
-        <li><a href="../docs/Alumni.html">Alumni</a></li>
+        <li><a href="/Alumni.html">Alumni</a></li>
       </ul>
       <div class="burger">
         <div></div><div></div><div></div>
