--- a/comimittees.html
+++ b/comimittees.html
@@ -53,19 +53,19 @@
   </header>
 
   <!-- ——— Alumni Hero Section ——— -->
-  <section class="alumni-hero">
+  <section class="committees-hero">
     <div class="hero-overlay">
       <h2>Alumni Network</h2>
       <p>A lifelong network</p>
-      <a href="#" class="btn">Join other alumni</a>
+      <a href="#" class="btn">Join other committees</a>
     </div>
   </section>
   <!-- ========== Alumni Network Detail Section ========== -->
-<section class="alumni-body">
+<section class="committees-body">
   <div class="container">
-    <div class="alumni-body-content">
+    <div class="committees-body-content">
       <!-- Left: Text -->
-      <div class="alumni-text">
+      <div class="committees-text">
         <h2>A Community for Life</h2>
         <p>
           Our EULSS Alumni Network brings together graduates from every year, forging
@@ -75,7 +75,7 @@
         </p>
         <p>
           Through mentorship circles, social events, and professional workshops, you’ll
-          find countless opportunities to learn from—and give back to—fellow alumni.
+          find countless opportunities to learn from—and give back to—fellow committees.
         </p>
         <p>
           Whether you’re seeking career guidance, personal growth, or simply a familiar
@@ -84,11 +84,11 @@
       </div>
 
       <!-- Right: Static Image linking to gallery -->
-      <div class="alumni-image">
+      <div class="committees-image">
         <a href="gallery.html">
           <img
             src="https://i.ibb.co/V0yvxMdy/Figplc0-Xk-AIz6wa.jpg"
-            alt="EULSS alumni event"
+            alt="EULSS committees event"
           />
         </a>
       </div>
@@ -96,11 +96,11 @@
   </div>
 </section>
 <!-- ========== Alumni Network Detail Section ========== -->
-<section class="alumni-body">
+<section class="committees-body">
   <div class="container">
-    <div class="alumni-body-content">
+    <div class="committees-body-content">
       <!-- Left: Text -->
-      <div class="alumni-text">
+      <div class="committees-text">
         <h2>A Community for Life</h2>
         <p>
           Our EULSS Alumni Network brings together graduates from every year, forging
@@ -110,7 +110,7 @@
         </p>
         <p>
           Through mentorship circles, social events, and professional workshops, you’ll
-          find countless opportunities to learn from—and give back to—fellow alumni.
+          find countless opportunities to learn from—and give back to—fellow committees.
         </p>
         <p>
           Whether you’re seeking career guidance, personal growth, or simply a familiar
@@ -119,11 +119,11 @@
       </div>
 
       <!-- Right: Static Image linking to gallery -->
-      <div class="alumni-image">
+      <div class="committees-image">
         <a href="gallery.html">
           <img
             src="https://i.ibb.co/V0yvxMdy/Figplc0-Xk-AIz6wa.jpg"
-            alt="EULSS alumni event"
+            alt="EULSS committees event"
           />
         </a>
       </div>
@@ -132,11 +132,11 @@
 </section>
 
 <!-- ========== Alumni Network Detail Section ========== -->
-<section class="alumni-body">
+<section class="committees-body">
   <div class="container">
-    <div class="alumni-body-content">
+    <div class="committees-body-content">
       <!-- Left: Text -->
-      <div class="alumni-text">
+      <div class="committees-text">
         <h2>A Community for Life</h2>
         <p>
           Our EULSS Alumni Network brings together graduates from every year, forging
@@ -146,7 +146,7 @@
         </p>
         <p>
           Through mentorship circles, social events, and professional workshops, you’ll
-          find countless opportunities to learn from—and give back to—fellow alumni.
+          find countless opportunities to learn from—and give back to—fellow committees.
         </p>
         <p>
           Whether you’re seeking career guidance, personal growth, or simply a familiar
@@ -155,11 +155,11 @@
       </div>
 
       <!-- Right: Static Image linking to gallery -->
-      <div class="alumni-image">
+      <div class="committees-image">
         <a href="gallery.html">
           <img
             src="https://i.ibb.co/V0yvxMdy/Figplc0-Xk-AIz6wa.jpg"
-            alt="EULSS alumni event"
+            alt="EULSS committees event"
           />
         </a>
       </div>
