--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="overlay"></div>
-    <img class="hero-logo"
-         src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
-         alt="EULSS Logo" />
+    <video autoplay loop muted playsinline class="hero-video">
+    <source src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg" type="video/mp4">
+     Your browser does not support the video tag.
+  </video>
     <h1>Elizade University Law Students Society</h1>
   </section>
 
