the hero video change the logo bacground removal on all pages added media

--- a/html/Alumni.html
+++ b/html/Alumni.html
@@ -6,7 +6,7 @@
     <!-- Logo -->
     <div class="logo">
       <a href="index.html">
-        <img src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg" alt="EULSS Logo" />
+        <img src="../EULSS_logo-removebg-preview.png" alt="EULSS Logo" />
       </a>
     </div>
 
@@ -34,7 +34,7 @@
     <nav class="navbar">
       <div class="logo">
         <img
-          src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+          src="../EULSS_logo-removebg-preview.png"
           alt="EULSS Logo"
         />
       </div>
@@ -175,7 +175,7 @@
   <footer class="footer">
     <div class="footer-left">
       <img
-        src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+        src="../EULSS_logo-removebg-preview.png"
         alt="EULSS Logo"
         class="footer-logo"
       />
