--- a/html/Employabilityhub.html
+++ b/html/Employabilityhub.html
@@ -24,7 +24,7 @@
       <!-- Logo -->
       <div class="logo">
         <img
-          src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+          src="../EULSS_logo-removebg-preview.png"
           alt="EULSS Logo"
         />
       </div>
@@ -92,7 +92,7 @@
   <!-- Left column: logo + social icons -->
   <div class="footer-left">
     <img
-      src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+      src="../EULSS_logo-removebg-preview.png"
       alt="EULSS Logo"
       class="footer-logo"
     />
