--- a/html/Gallery.html
+++ b/html/Gallery.html
@@ -12,7 +12,7 @@
   <header class="header">
     <nav class="navbar">
       <div class="logo">
-        <img src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+        <img src="../EULSS_logo-removebg-preview.png"
              alt="EULSS Logo" />
       </div>
       <ul class="nav-links">
