--- a/html/News&Blog.html
+++ b/html/News&Blog.html
@@ -28,7 +28,7 @@
   <header class="header">
     <nav class="navbar">
       <div class="logo">
-        <img src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+        <img src="../EULSS_logo-removebg-preview.png"
              alt="EULSS Logo" />
       </div>
       <ul class="nav-links">
@@ -127,7 +127,7 @@
   <div class="footer-left">
     <!-- Logo -->
     <img
-      src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+      src="../EULSS_logo-removebg-preview.png"
       alt="EULSS Logo"
       class="footer-logo"
     />
