--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
       <!-- Logo -->
       <div class="logo">
-        <img src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg" alt="EULSS Logo" />
+        <img src="../EULSS_logo-removebg-preview.png" alt="EULSS Logo" />
       </div>
 
       <!-- Nav links -->
@@ -37,10 +37,15 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <div class="overlay"></div>
-    <img class="hero-logo"
-         src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
-         alt="EULSS Logo" />
+    <div class="overlay">
+     <!-- Replace the image with video -->
+  <video autoplay loop muted playsinline class="hero-video">
+    <source src="../lawfacvideo (1).mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  </div>
+  <div class="hero-content">
+    <img src="../EULSS_logo-removebg-preview.png" alt="Logo" class="hero-logo">
     <h1>Elizade University Law Students Society</h1>
   </section>
 
@@ -181,7 +186,7 @@
 
     <div class="role-card">
       <img
-        src="https://i.pinimg.com/736x/51/e0/d5/51e0d5aa27808ce689e3dd5a5cd7685a.jpg"
+        src="../ChatGPT_Image_Apr_1__2025__05_21_21_PM-removebg-preview (1).png"
         alt="Chief Judge"
       />
       <h3>Nnenna Okoye</h3>
@@ -193,7 +198,7 @@
   <!-- Left: blue background, logo & socials -->
   <div class="footer-left">
     <img
-      src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+      src="../EULSS_logo-removebg-preview.png"
       alt="EULSS Logo"
       class="footer-logo"
     />
