--- a/html/comimittees.html
+++ b/html/comimittees.html
@@ -34,7 +34,7 @@
     <nav class="navbar">
       <div class="logo">
         <img
-          src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+          src="../EULSS_logo-removebg-preview.png"
           alt="EULSS Logo"
         />
       </div>
@@ -176,7 +176,7 @@
   <footer class="footer">
     <div class="footer-left">
       <img
-        src="https://i.ibb.co/vC2RJvsS/D9zp-LELy-400x400.jpg"
+        src="../EULSS_logo-removebg-preview.png"
         alt="EULSS Logo"
         class="footer-logo"
       />
