modern designs still working on commitee tho

--- a/News&Blog.html
+++ b/News&Blog.html
@@ -28,8 +28,10 @@
   <header class="header">
     <nav class="navbar">
       <div class="logo">
-        <img src="../EULSS_logo-removebg-preview.png"
-             alt="EULSS Logo" />
+        <a href="/index.html">
+          <img src="../EULSS_logo-removebg-preview.png"
+               alt="EULSS Logo" />
+        </a>
       </div>
       <ul class="nav-links">
         <li><a href="/index.html">Home</a></li>
@@ -126,11 +128,13 @@
 <footer class="footer">
   <div class="footer-left">
     <!-- Logo -->
-    <img
-      src="../EULSS_logo-removebg-preview.png"
-      alt="EULSS Logo"
-      class="footer-logo"
-    />
+    <a href="/index.html">
+      <img
+        src="../EULSS_logo-removebg-preview.png"
+        alt="EULSS Logo"
+        class="footer-logo"
+      />
+    </a>
 
     <!-- Major links (bold) -->
     <nav class="footer-links major">
