--- a/Alumni Network.html
+++ b/Alumni Network.html
@@ -18,7 +18,9 @@
     <nav class="navbar">
       <!-- Logo -->
       <div class="logo">
-        <img src="../EULSS_logo-removebg-preview.png" alt="EULSS Logo" />
+        <a href="/index.html">
+          <img src="../EULSS_logo-removebg-preview.png" alt="EULSS Logo" />
+        </a>
       </div>
 
       <!-- Nav links -->
