--- a/Gallery.html
+++ b/Gallery.html
@@ -12,8 +12,10 @@
   <header class="header">
     <nav class="navbar">
       <div class="logo">
-        <img src="../EULSS_logo-removebg-preview.png"
-             alt="EULSS Logo" />
+        <a href="/index.html">
+          <img src="../EULSS_logo-removebg-preview.png"
+               alt="EULSS Logo" />
+        </a>
       </div>
       <ul class="nav-links">
         <li><a href="/index.html">Home</a></li>
