the rest of the pages plus flash cards

--- a/Employabilityhub.html
+++ b/Employabilityhub.html
@@ -28,10 +28,10 @@
       <ul class="nav-links">
         <li><a href="/index.html">Home</a></li>
         <li><a href="/Employabilityhub.html">Employability Hub</a></li>
-        <li><a href="#">Resources</a></li>
+        <li><a href="/resources.html">Resources</a></li>
         <li><a href="/comimittees.html">Committees</a></li>
         <li><a href="/News&Blog.html">News &amp; Blog</a></li>
-        <li><a href="/Alumni.html">Alumni</a></li>
+        <li><a href="/alumni.html">Alumni</a></li>
       </ul>
 
       <!-- Burger icon for mobile -->
@@ -440,9 +440,10 @@
         <ul class="footer-links">
           <li><a href="/">Home</a></li>
           <li><a href="/Employabilityhub.html">Employability Hub</a></li>
+          <li><a href="/resources.html">Resources</a></li>
           <li><a href="/comimittees.html">Committees</a></li>
           <li><a href="/News&Blog.html">News & Blog</a></li>
-          <li><a href="/Alumni.html">Alumni Network</a></li>
+          <li><a href="/alumni.html">Alumni</a></li>
         </ul>
       </div>
 
