--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
         <li><a href="/Employabilityhub.html">Employability Hub</a></li>
-        <li><a href="#">Resources</a></li>
+        <li><a href="/resources.html">Resources</a></li>
         <li><a href="/comimittees.html">Committees</a></li>
         <li><a href="/News&Blog.html">News &amp; Blog</a></li>
-        <li><a href="/Alumni.html">Alumni</a></li>
+        <li><a href="/alumni.html">Alumni</a></li>
       </ul>
 
       <!-- Burger icon -->
@@ -399,6 +399,226 @@
     </div>
   </section>
 
+  <!-- ========== Quick Access Sections ========== -->
+  <section class="quick-access-sections">
+    <div class="sections-container">
+      <!-- Section Header -->
+      <div class="section-header">
+        <div class="section-tag">
+          <i class="fas fa-th-large"></i>
+          <span>Quick Access</span>
+        </div>
+        <h2 class="section-title">
+          Explore Our <span class="highlight-text">Sections</span>
+        </h2>
+        <p class="section-description">
+          Access all areas of the EULSS system with one click - find what you need quickly and efficiently
+        </p>
+      </div>
+
+      <!-- Sections Grid -->
+      <div class="sections-grid">
+        <!-- Employability Hub Section -->
+        <div class="section-card" 
+             onclick="window.location.href='/Employabilityhub.html'" 
+             onkeydown="if(event.key==='Enter'||event.key===' ') window.location.href='/Employabilityhub.html'"
+             tabindex="0"
+             role="button"
+             aria-label="Navigate to Employability Hub - Career guidance, job opportunities, internships, and professional development resources">
+          <div class="section-icon">
+            <i class="fas fa-briefcase"></i>
+          </div>
+          <div class="section-content">
+            <h3>Employability Hub</h3>
+            <p>Career guidance, job opportunities, internships, and professional development resources</p>
+            <div class="section-meta">
+              <span class="section-type">
+                <i class="fas fa-star"></i>
+                Career Development
+              </span>
+              <span class="section-status active">
+                <i class="fas fa-circle"></i>
+                Active
+              </span>
+            </div>
+          </div>
+          <div class="section-arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </div>
+
+        <!-- Resources Section -->
+        <div class="section-card" 
+             onclick="window.location.href='/resources.html'" 
+             onkeydown="if(event.key==='Enter'||event.key===' ') window.location.href='/resources.html'"
+             tabindex="0"
+             role="button"
+             aria-label="Navigate to Resources - Study materials, legal research tools, academic resources, and learning materials">
+          <div class="section-icon">
+            <i class="fas fa-book-open"></i>
+          </div>
+          <div class="section-content">
+            <h3>Resources</h3>
+            <p>Study materials, legal research tools, academic resources, and learning materials</p>
+            <div class="section-meta">
+              <span class="section-type">
+                <i class="fas fa-graduation-cap"></i>
+                Academic
+              </span>
+              <span class="section-status active">
+                <i class="fas fa-circle"></i>
+                Active
+              </span>
+            </div>
+          </div>
+          <div class="section-arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </div>
+
+        <!-- Committees Section -->
+        <div class="section-card" 
+             onclick="window.location.href='/comimittees.html'" 
+             onkeydown="if(event.key==='Enter'||event.key===' ') window.location.href='/comimittees.html'"
+             tabindex="0"
+             role="button"
+             aria-label="Navigate to Committees - Join our specialized committees, participate in projects, and contribute to EULSS activities">
+          <div class="section-icon">
+            <i class="fas fa-users"></i>
+          </div>
+          <div class="section-content">
+            <h3>Committees</h3>
+            <p>Join our specialized committees, participate in projects, and contribute to EULSS activities</p>
+            <div class="section-meta">
+              <span class="section-type">
+                <i class="fas fa-handshake"></i>
+                Community
+              </span>
+              <span class="section-status active">
+                <i class="fas fa-circle"></i>
+                Active
+              </span>
+            </div>
+          </div>
+          <div class="section-arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </div>
+
+        <!-- News & Blog Section -->
+        <div class="section-card" 
+             onclick="window.location.href='/News&Blog.html'" 
+             onkeydown="if(event.key==='Enter'||event.key===' ') window.location.href='/News&Blog.html'"
+             tabindex="0"
+             role="button"
+             aria-label="Navigate to News & Blog - Latest updates, announcements, event coverage, and insights from the EULSS community">
+          <div class="section-icon">
+            <i class="fas fa-newspaper"></i>
+          </div>
+          <div class="section-content">
+            <h3>News & Blog</h3>
+            <p>Latest updates, announcements, event coverage, and insights from the EULSS community</p>
+            <div class="section-meta">
+              <span class="section-type">
+                <i class="fas fa-bullhorn"></i>
+                Information
+              </span>
+              <span class="section-status active">
+                <i class="fas fa-circle"></i>
+                Active
+              </span>
+            </div>
+          </div>
+          <div class="section-arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </div>
+
+        <!-- Alumni Section -->
+        <div class="section-card" 
+             onclick="window.location.href='/alumni.html'" 
+             onkeydown="if(event.key==='Enter'||event.key===' ') window.location.href='/alumni.html'"
+             tabindex="0"
+             role="button"
+             aria-label="Navigate to Alumni - Connect with EULSS graduates, access alumni network, and explore success stories">
+          <div class="section-icon">
+            <i class="fas fa-user-graduate"></i>
+          </div>
+          <div class="section-content">
+            <h3>Alumni</h3>
+            <p>Connect with EULSS graduates, access alumni network, and explore success stories</p>
+            <div class="section-meta">
+              <span class="section-type">
+                <i class="fas fa-network-wired"></i>
+                Networking
+              </span>
+              <span class="section-status active">
+                <i class="fas fa-circle"></i>
+                Active
+              </span>
+            </div>
+          </div>
+          <div class="section-arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </div>
+
+        <!-- Gallery Section -->
+        <div class="section-card" 
+             onclick="window.location.href='/Gallery.html'" 
+             onkeydown="if(event.key==='Enter'||event.key===' ') window.location.href='/Gallery.html'"
+             tabindex="0"
+             role="button"
+             aria-label="Navigate to Gallery - Browse photos and videos from EULSS events, activities, and memorable moments">
+          <div class="section-icon">
+            <i class="fas fa-images"></i>
+          </div>
+          <div class="section-content">
+            <h3>Gallery</h3>
+            <p>Browse photos and videos from EULSS events, activities, and memorable moments</p>
+            <div class="section-meta">
+              <span class="section-type">
+                <i class="fas fa-camera"></i>
+                Media
+              </span>
+              <span class="section-status active">
+                <i class="fas fa-circle"></i>
+                Active
+              </span>
+            </div>
+          </div>
+          <div class="section-arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </div>
+      </div>
+
+      <!-- Quick Stats -->
+      <div class="sections-stats">
+        <div class="stat-item">
+          <div class="stat-number">6</div>
+          <div class="stat-label">Active Sections</div>
+        </div>
+        <div class="stat-item">
+          <div class="stat-number">24/7</div>
+          <div class="stat-label">Access Available</div>
+        </div>
+        <div class="stat-item">
+          <div class="stat-number">100%</div>
+          <div class="stat-label">Functional</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Background Elements -->
+    <div class="sections-bg-pattern"></div>
+    <div class="sections-floating-elements">
+      <div class="floating-element element-1"></div>
+      <div class="floating-element element-2"></div>
+      <div class="floating-element element-3"></div>
+    </div>
+  </section>
+
   <!-- ========== Partners Section ========== -->
   <section class="partners-modern">
     <div class="partners-container">
@@ -554,9 +774,10 @@
         <ul class="footer-links">
           <li><a href="/">Home</a></li>
           <li><a href="/Employabilityhub.html">Employability Hub</a></li>
+          <li><a href="/resources.html">Resources</a></li>
           <li><a href="/comimittees.html">Committees</a></li>
           <li><a href="/News&Blog.html">News & Blog</a></li>
-          <li><a href="/Alumni.html">Alumni Network</a></li>
+          <li><a href="/alumni.html">Alumni</a></li>
         </ul>
       </div>
 
@@ -725,14 +946,45 @@
       });
     }, observerOptions);
 
-    // Observe news cards and partner cards for scroll animations
+    // Observe news cards, partner cards, stat cards, and section cards for scroll animations
     document.addEventListener('DOMContentLoaded', function () {
-      const animatedElements = document.querySelectorAll('.news-card, .partner-card, .stat-card');
+      const animatedElements = document.querySelectorAll('.news-card, .partner-card, .stat-card, .section-card');
       animatedElements.forEach(el => {
         el.style.opacity = '0';
         el.style.transform = 'translateY(20px)';
         el.style.transition = 'opacity 0.6s ease, transform 0.6s ease';
         observer.observe(el);
+      });
+
+      // Enhanced section card interactions
+      const sectionCards = document.querySelectorAll('.section-card');
+      sectionCards.forEach(card => {
+        // Add click feedback
+        card.addEventListener('click', function() {
+          // Add a subtle click effect
+          this.style.transform = 'scale(0.98)';
+          setTimeout(() => {
+            this.style.transform = 'translateY(-10px)';
+          }, 150);
+        });
+
+        // Add keyboard navigation support
+        card.addEventListener('keydown', function(e) {
+          if (e.key === 'Enter' || e.key === ' ') {
+            e.preventDefault();
+            this.click();
+          }
+        });
+
+        // Add focus management
+        card.addEventListener('focus', function() {
+          this.style.outline = '3px solid #3b82f6';
+          this.style.outlineOffset = '2px';
+        });
+
+        card.addEventListener('blur', function() {
+          this.style.outline = 'none';
+        });
       });
     });
   </script>
