--- a/Gallery.html
+++ b/Gallery.html
@@ -24,7 +24,7 @@
         <li><a href="/comimittees.html">Committees</a></li>
          <li><a href="/News&Blog.html">News &amp; Blog</a></li>
         <li><a class="active" href="gallery.html">Gallery</a></li>
-        <li><a href="/Alumni.html">Alumni</a></li>
+        <li><a href="/alumni.html">Alumni</a></li>
       </ul>
       <div class="burger">
         <div></div><div></div><div></div>
