--- a/Employabilityhub.html
+++ b/Employabilityhub.html
@@ -250,7 +250,7 @@
       <div class="resources-grid">
         <div class="resource-card">
           <div class="resource-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Legal Research Guide" />
+            <img src="img src/research.jpeg" alt="Legal Research Guide" />
           </div>
           <div class="resource-content">
             <h3>Legal Research Guide</h3>
@@ -268,7 +268,7 @@
 
         <div class="resource-card">
           <div class="resource-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Interview Preparation" />
+            <img src="img src/interview.jpeg" alt="Interview Preparation" />
           </div>
           <div class="resource-content">
             <h3>Interview Preparation Kit</h3>
@@ -286,7 +286,7 @@
 
         <div class="resource-card">
           <div class="resource-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="CV Templates" />
+            <img src="img src/CV.png" alt="CV Templates" />
           </div>
           <div class="resource-content">
             <h3>CV Templates Collection</h3>
