--- a/News&Blog.html
+++ b/News&Blog.html
@@ -767,7 +767,7 @@
             From late-night study sessions to courtroom competitions, discover the bonds that shaped their legal journey.
           </p>
           <div class="author-info">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Author" class="author-avatar" />
+            <img src="img src/lanre head.jpg" alt="Author" class="author-avatar" />
             <div class="author-details">
               <span class="author-name">EULSS Editorial Team</span>
               <span class="read-time">5 min read</span>
@@ -776,10 +776,30 @@
           <a href="#" class="read-more-btn">Read Full Article <i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="featured-image">
-          <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Graduates celebrating" />
+          <img src="img src/lanre head.jpg" alt="Graduates celebrating" />
           <div class="image-overlay">
             <span class="overlay-text">Class of 2025</span>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ========== Quote Section ========== -->
+  <section class="quote-section">
+    <div class="container">
+      <div class="quote-content">
+        <div class="quote-icon">
+          <i class="fas fa-quote-left"></i>
+        </div>
+        <blockquote>
+          Don't be the echo, be the voice.
+        </blockquote>
+        <cite>— Chukwunye Augusta Ojeih</cite>
+        <div class="quote-decoration">
+          <div class="decoration-line"></div>
+          <div class="decoration-dot"></div>
+          <div class="decoration-line"></div>
         </div>
       </div>
     </div>
@@ -837,7 +857,7 @@
       <div class="articles-grid">
         <article class="article-card">
           <div class="article-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Article 1" />
+            <img src="img src/law magaziine.jpg" alt="Article 1" />
             <div class="article-category">Student Life</div>
           </div>
           <div class="article-content">
@@ -851,7 +871,7 @@
             </p>
             <div class="article-footer">
               <div class="author">
-                <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Author" />
+                <img src="img src/law magaziine.jpg" alt="Author" />
                 <span>Sarah Johnson</span>
               </div>
               <a href="#" class="read-more">Read More</a>
@@ -861,7 +881,7 @@
 
         <article class="article-card">
           <div class="article-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Article 2" />
+            <img src="img src/common room fac.jpg" alt="Article 2" />
             <div class="article-category">Career Guidance</div>
           </div>
           <div class="article-content">
@@ -869,7 +889,7 @@
               <span class="date">August 7, 2025</span>
               <span class="read-time">4 min read</span>
             </div>
-            <h3 class="article-title">Graduation 2025: Honoring a New Generation</h3>
+            <h3 class="article-title">Final Exams</h3>
             <p class="article-excerpt">
               Celebrating the achievements of our graduating class and their bright futures in the legal profession.
             </p>
@@ -885,7 +905,7 @@
 
         <article class="article-card">
           <div class="article-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Article 3" />
+            <img src="img src/law library and auditorium.jpg" alt="Article 3" />
             <div class="article-category">Legal Updates</div>
           </div>
           <div class="article-content">
@@ -909,7 +929,7 @@
 
         <article class="article-card">
           <div class="article-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Article 4" />
+            <img src="img src/lady justice ubi jus.jpg" alt="Article 4" />
             <div class="article-category">Alumni Spotlight</div>
           </div>
           <div class="article-content">
@@ -930,26 +950,6 @@
             </div>
           </div>
         </article>
-      </div>
-    </div>
-  </section>
-
-  <!-- ========== Quote Section ========== -->
-  <section class="quote-section">
-    <div class="container">
-      <div class="quote-content">
-        <div class="quote-icon">
-          <i class="fas fa-quote-left"></i>
-        </div>
-        <blockquote>
-          Don't be the echo, be the voice.
-        </blockquote>
-        <cite>— Chukwunye Augusta Ojeih</cite>
-        <div class="quote-decoration">
-          <div class="decoration-line"></div>
-          <div class="decoration-dot"></div>
-          <div class="decoration-line"></div>
-        </div>
       </div>
     </div>
   </section>
