--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="about-visual-section">
           <div class="image-container">
             <div class="image-wrapper">
-              <img src="https://i.ibb.co/V0yvxMdy/Figplc0-Xk-AIz6wa.jpg" alt="EULSS Students" />
+              <img src="img src/law fac logo.jpg" alt="EULSS Students" />
               <div class="image-overlay">
                 <div class="overlay-content">
                   <div class="overlay-text">
@@ -251,7 +251,7 @@
         <!-- Featured News Card -->
         <div class="news-card featured">
           <div class="news-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Moot Court Championship">
+            <img src="img src/moot competition .jpg" alt="Moot Court Championship">
             <div class="news-overlay">
               <div class="news-meta">
                 <span class="news-date">
@@ -285,7 +285,7 @@
         <!-- Regular News Cards -->
         <div class="news-card">
           <div class="news-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Induction Ceremony">
+            <img src="img src/induction.JPG" alt="Induction Ceremony">
             <div class="news-overlay">
               <div class="news-meta">
                 <span class="news-date">
@@ -300,7 +300,7 @@
             </div>
           </div>
           <div class="news-content">
-            <h3>Induction Ceremony Schedule Released</h3>
+            <h3>Induction Ceremony</h3>
             <p>New members welcome! Check out the complete schedule for our upcoming induction ceremony.</p>
             <div class="news-footer">
               <div class="news-tags">
@@ -319,7 +319,7 @@
         
         <div class="news-card">
           <div class="news-image">
-            <img src="https://i.ibb.co/q3yTpr76/GC0m-EPr-WIAEo7-Zb.jpg" alt="Legal Workshop">
+            <img src="img src/law magaziine.jpg" alt="EULSS Magazine">
             <div class="news-overlay">
               <div class="news-meta">
                 <span class="news-date">
@@ -334,9 +334,8 @@
             </div>
           </div>
           <div class="news-content">
-            <h3>Legal Research Workshop Series</h3>
-            <p>Enhance your research skills with our comprehensive workshop series covering modern legal research
-              techniques.</p>
+            <h3>EULSS Magazine Launch</h3>
+            <p>Get all the hot takes, from legal news, D&I to commercial awareness.</p>
             <div class="news-footer">
               <div class="news-tags">
                 <span class="tag">Workshop</span>
@@ -607,20 +606,20 @@
   <section class="faculty-arms">
     <div class="container">
       <div class="role-card">
-        <img src="https://i.pinimg.com/736x/3b/4d/f2/3b4df2c3b38546056d3e268e9243bad4.jpg" alt="Legislative Speaker" />
-        <h3>Hon. Chiamaka Obi</h3>
+        <img src="img src/wani-removebg-preview.png" alt="EULSS Legislative Speaker" />
+        <h3>Oluwani John</h3>
         <p class="role-title">Legislative Speaker</p>
       </div>
 
       <div class="role-card">
-        <img src="https://i.pinimg.com/736x/4b/29/28/4b2928f4f979c4cccdd9703ca0835716.jpg" alt="President" />
-        <h3>Abdulrahman Yusuf</h3>
-        <p class="role-title">Society President</p>
+        <img src="img src/seun-removebg-preview.png" alt="EULSS President" />
+        <h3>Oluwaseun Fatudimu Raphael</h3>
+        <p class="role-title"> President</p>
       </div>
 
       <div class="role-card">
-        <img src="../ChatGPT_Image_Apr_1__2025__05_21_21_PM-removebg-preview (1).png" alt="Chief Judge" />
-        <h3>Nnenna Okoye</h3>
+        <img src="img src/catherine-removebg-preview.png" alt="Eulss Chief Judge" />
+        <h3>Catherine Falodun </h3>
         <p class="role-title">Chief Judge</p>
       </div>
     </div>
